2009-11-01  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_resource.c (xnee_parse_option_impl): 
	Added check if NULL ptr when verbose printing
	(xnee_key2string): 
	Added check if NULL ptr when verbose printing

	* libxnee/src/xnee_record.c (xnee_has_record_extension): 
	Adding note that missing RECORD extension is not an Xnee error

2009-06-17  Henrik Sandklef  <hesa@korngold.sandklef.com>

	* libxnee/src/print.c (xnee_print_xnee_settings): 
	Fixed seg fault 

2009-05-27  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_range.c: 
	call xnee_set_x_server_version if info not there

	* libxnee/src/xnee_record.c: 
	Creating record context on control display

	* libxnee/src/xnee_session.c: 
	Added some logic debugging code

	* libxnee/test/libtest.c (test_xnee_data): 
	Test updates

	* libxnee/include/libxnee/xnee.h: 
	Added variables (to xnee_data) to store 
        x server info from the display
	Updated (c) year
	
	* libxnee/src/xnee_range.c: 
	* libxnee/src/xnee_record.c: 
	* libxnee/src/xnee_alloc.c: 
	Added checks and work around for faults that appears
	to happen only in Xorg 1.6

	* libxnee/src/xnee_session.c: 
	Added fun (xnee_set_x_server_version) to get and store 
	x server info from the display

	* doc/version.texi: 
	* configure.in: 
	Version set to 3.04 (and updated date)

	* libxnee/src/print.c (xnee_print_xnee_settings): 
	Removed ugly merge leftover

2009-05-23  Henrik Sandklef  <hesa@bach.sandklef.com>

	* doc/Makefile.am (docdir): 
	Added @ before commands in Makefile (less verbose)

	* configure.in: 
	Print out commands to build also when building gui+applet

	* libxnee/src/print.c (xnee_human_print_request_verbose): 
	Not printing if NULL pointer. Removed seg fault crash on solaris
        Updated (c) year

	* libxnee/src/feedback.c: 
	Remove va_list init to NULL

2009-05-22  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_session.c (xnee_close_down): 
	Checking grab_keys is not NULL before free
